chore: fix hover styles for collapsed cards

--- a/src/components/main-sidebar/dimension-card/styles/dimension-card-header.module.css
+++ b/src/components/main-sidebar/dimension-card/styles/dimension-card-header.module.css
@@ -10,6 +10,9 @@
     cursor: pointer;
     inline-size: 100%;
 }
+.container.collapsed {
+    border-radius: 4px;
+}
 .container:hover {
     background-color: var(--colors-grey100);
 }
